test/fixtures/behaviors/common/error/badImport.behavior.ts
//@ts-ignore
import { behavior, blahblah } from "esbehavior"

export default behavior("Something", [
  blahblah()
])